--- a/model/public/registration.html
+++ b/model/public/registration.html
@@ -149,6 +149,16 @@
         </div>
    </form>
 
+   <!-- ==========  ENDS FORM ========== -->
+   <div class="thank_you">
+        <div class="thank_you_box">
+                <h1>Thank you for your registration</h1>
+                <h4>We will get back to you within a day via phone call or whatsupp</h4>
+                <!-- <a href="index.html"><button>Home</button></a> -->
+        </div>
+        
+   </div>
+
     <!-- ========== FOOTER ========== -->
     <footer>
         <div class="footerr">
@@ -193,5 +203,6 @@
             </div>
         </div>
     </footer>
+
 </body>
 </html>
