--- a/model/public/registration_admin.html
+++ b/model/public/registration_admin.html
@@ -17,7 +17,7 @@
                         <img src="images/logo.png" alt="">
                     </div>
                     <!-- ========== THIS IS A FORM REGISTRY -->
-                    <form action="">
+                    <form action="" class="form_admin">
                         <input type="text" placeholder="Enter Your Full Name" name="fullName">
                         <input type="mail" placeholder="Enter Your Email here" name="email">
                         <input type="password" name="password" id="password" placeholder="Enter Your Password">
